<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_details_background"
    app:behavior_peekHeight="90dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    app:layout_constrainedHeight="true">

    <ImageView
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/animal_details_main_margin" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_start_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="80dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/animal_list_main_margin" />

            <TextView
                android:id="@+id/tv_animal_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/animal_details_margin_name"
                android:text="@string/pet_name"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/gl_start_gender"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/gl_start"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_gender"
                style="@style/style_gender"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/female"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@id/gl_end"
                app:layout_constraintTop_toTopOf="@id/tv_animal_name" />

            <TextView
                android:id="@+id/tv_animal_age"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/pet_age"
                android:textColor="@color/pet_age_text_color"
                app:layout_constraintStart_toEndOf="@id/gl_start"
                app:layout_constraintTop_toBottomOf="@id/tv_animal_name" />

            <ImageView
                android:id="@+id/iv_location"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_location"
                app:layout_constraintStart_toEndOf="@id/gl_start"
                app:layout_constraintTop_toBottomOf="@id/tv_animal_age"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="2dp"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/iv_location"
                app:layout_constraintStart_toEndOf="@id/iv_location"
                app:layout_constraintTop_toTopOf="@id/iv_location"
                tools:text="@string/location" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="tv_location,iv_location" />

            <TextView
                android:id="@+id/tv_about_me_title"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="22dp"
                android:text="@string/about_me_title"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/gl_start"
                app:layout_constraintTop_toBottomOf="@id/barrier_location" />

            <TextView
                android:id="@+id/tv_about_me"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@id/gl_end"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/gl_start"
                app:layout_constraintTop_toBottomOf="@id/tv_about_me_title"
                tools:text="@string/test_about_me" />

            <TextView
                android:id="@+id/tv_details_title"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="22dp"
                android:text="@string/title_details"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/gl_start"
                app:layout_constraintTop_toBottomOf="@id/tv_about_me" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_details"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintStart_toEndOf="@id/gl_start"
                app:layout_constraintTop_toBottomOf="@id/tv_details_title"
                tools:itemCount="2"
                tools:listitem="@layout/view_holder_details" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_tags"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                app:layout_constraintEnd_toStartOf="@id/gl_end"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/gl_start"
                app:layout_constraintTop_toBottomOf="@id/rv_details"
                tools:itemCount="3"
                tools:listitem="@layout/view_holder_tag" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/view_organization"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:background="@drawable/organization_background"
                app:layout_constraintStart_toEndOf="@id/gl_start"
                app:layout_constraintTop_toBottomOf="@id/rv_tags">

                <ImageView
                    android:id="@+id/iv_organization"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp"
                    android:src="@drawable/organization_title"
                    app:layout_constraintBottom_toBottomOf="@id/view_organization"
                    app:layout_constraintStart_toStartOf="@id/view_organization"
                    app:layout_constraintTop_toTopOf="@id/view_organization"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/tv_organization_name"
                    style="@style/style_organization_information"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="@string/organization_name"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@id/view_organization"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@id/iv_organization"
                    app:layout_constraintTop_toTopOf="@id/iv_organization" />

                <TextView
                    android:id="@+id/tv_organization_location"
                    style="@style/style_organization_information"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/location"
                    android:textColor="@color/organization_location_text_color"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="@id/view_organization"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@id/iv_organization"
                    app:layout_constraintTop_toBottomOf="@id/tv_organization_name" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_adopt"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="18dp"
                android:background="@drawable/adopt_button_background"
                android:elevation="6dp"
                android:gravity="center"
                android:paddingStart="64dp"
                android:paddingTop="10dp"
                android:paddingEnd="64dp"
                android:paddingBottom="10dp"
                android:text="@string/adopt"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_organization" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                app:layout_constraintTop_toBottomOf="@id/button_adopt" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>