<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="92dp"
    android:layout_marginStart="@dimen/animal_list_main_margin"
    android:layout_marginEnd="@dimen/animal_list_main_margin"
    android:layout_marginBottom="@dimen/animal_list_main_margin"
    android:elevation="4dp"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardCornerRadius="8dp"
    app:cardElevation="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="6dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_start_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="64dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="6dp" />

        <TextView
            android:id="@+id/tv_gender"
            style="@style/style_gender"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="6dp"
            android:background="@drawable/female_background"
            android:text="@string/female"
            android:textColor="@color/female_text_color"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gl_top" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_pet_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="6dp"
            android:outlineProvider="background"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@id/gl_bottom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gl_top"
            app:shapeAppearanceOverlay="@style/rounded_image_view"
            tools:src="@drawable/ic_animal_placeholder" />

        <TextView
            android:id="@+id/tv_pet_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/gl_start_gender"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/iv_pet_image"
            app:layout_constraintTop_toBottomOf="@id/gl_top"
            tools:text="@string/pet_name" />

        <TextView
            android:id="@+id/tv_pet_age"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:textColor="@color/pet_age_text_color"
            android:textSize="10sp"
            app:layout_constraintStart_toEndOf="@id/iv_pet_image"
            app:layout_constraintTop_toBottomOf="@id/tv_pet_name"
            tools:text="@string/pet_age" />

        <ImageView
            android:id="@+id/iv_location"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_marginStart="15dp"
            android:src="@drawable/ic_location"
            app:layout_constraintBottom_toTopOf="@id/gl_bottom"
            app:layout_constraintStart_toEndOf="@id/iv_pet_image" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="2dp"
            android:textColor="@color/black"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_location"
            app:layout_constraintStart_toEndOf="@id/iv_location"
            app:layout_constraintTop_toTopOf="@id/iv_location"
            tools:text="@string/location" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>